--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^2.39.1",
+		"@woowa-babble/random-nickname": "^1.0.2",
 		"clipboard": "^2.0.11",
 		"moment": "^2.30.1",
 		"svelte-french-toast": "^1.2.0"
