--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "d-dog",
+	"name": "yesim.dog",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
@@ -8,7 +8,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"gh-pages": "npm run build && npx gh-pages -d build"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
@@ -32,8 +33,9 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^2.39.1",
+		"@sveltejs/adapter-static": "^3.0.1",
 		"@woowa-babble/random-nickname": "^1.0.2",
-		"clipboard": "^2.0.11",
+		"gh-pages": "^6.1.1",
 		"moment": "^2.30.1",
 		"svelte-french-toast": "^1.2.0"
 	}
